--- a/env.example
+++ b/env.example
@@ -1,6 +1,9 @@
 # ===========================================
-# RLT Receipt Matcher - Environment Variables
+# RLT AUTOMATION SYSTEM - Environment Variables
 # ===========================================
+# Bot 1: Receipt Processor (Gmail → QBO Expenses)
+# Bot 2: Invoice Drafter (Google Sheet → QBO Invoices + RingCentral SMS)
+#
 # Copy this file to .env and fill in your values
 
 # Server Configuration
@@ -8,7 +11,7 @@ PORT=3000
 NODE_ENV=development
 
 # ===========================================
-# GMAIL API CREDENTIALS
+# GMAIL API CREDENTIALS (Bot 1)
 # ===========================================
 # Get these from Google Cloud Console:
 # https://console.cloud.google.com/apis/credentials
@@ -19,13 +22,13 @@ GMAIL_CLIENT_SECRET=your_gmail_client_secret_here
 GMAIL_REDIRECT_URI=http://localhost:3000/auth/gmail/callback
 
 # Email to monitor for receipts
-GMAIL_USER_EMAIL=your_email@gmail.com
+GMAIL_USER_EMAIL=rltsystemsllc@gmail.com
 
 # Label to apply after processing (will be created if doesn't exist)
 GMAIL_PROCESSED_LABEL=RLT-Processed
 
 # ===========================================
-# QUICKBOOKS ONLINE CREDENTIALS
+# QUICKBOOKS ONLINE CREDENTIALS (Both Bots)
 # ===========================================
 # Get these from Intuit Developer Portal:
 # https://developer.intuit.com/app/developer/qbo/docs/get-started
@@ -39,18 +42,69 @@ QBO_ENVIRONMENT=sandbox
 # Your QuickBooks Company ID (found in QBO URL after login)
 QBO_REALM_ID=your_company_id_here
 
+# Default expense account name
+QBO_EXPENSE_ACCOUNT=Job Supplies
+
 # ===========================================
-# SCHEDULER SETTINGS
+# GOOGLE SHEETS (Bot 2)
+# ===========================================
+# The Sheet ID is the long string in the Google Sheets URL:
+# https://docs.google.com/spreadsheets/d/SHEET_ID_HERE/edit
+
+GOOGLE_SHEET_ID=your_sheet_id_here
+GOOGLE_SHEET_NAME=Form Responses 1
+
+# Optional: Google Drive folder for storing generated PDFs
+GOOGLE_DRIVE_FOLDER_ID=
+
+# ===========================================
+# RINGCENTRAL SMS (Bot 2)
+# ===========================================
+# Get these from RingCentral Developer Portal:
+# https://developers.ringcentral.com/
+
+RINGCENTRAL_CLIENT_ID=your_ringcentral_client_id
+RINGCENTRAL_CLIENT_SECRET=your_ringcentral_client_secret
+RINGCENTRAL_SERVER=https://platform.ringcentral.com
+# Use https://platform.devtest.ringcentral.com for sandbox
+
+# JWT Token for authentication (create in RC developer portal)
+RINGCENTRAL_JWT_TOKEN=your_jwt_token_here
+
+# Dedicated phone number for Bot 2 (format: +18001234567)
+RINGCENTRAL_BOT_PHONE=+1808XXXXXXX
+
+# Notification recipients
+JESSICA_PHONE=+18082688453
+BOBBY_PHONE=+18088666500
+
+# ===========================================
+# BOT 1 SCHEDULER (Receipt Processing)
 # ===========================================
 # How often to check for new receipts (cron format)
 # Default: every 5 minutes
 SCHEDULER_CRON=*/5 * * * *
-
-# Enable/disable automatic scheduling
 SCHEDULER_ENABLED=true
 
 # ===========================================
-# RECEIPT PROCESSING
+# BOT 2 SCHEDULER (Invoice Drafting)
+# ===========================================
+# How often to check for urgent billing (cron format)
+BOT2_SCHEDULER_CRON=*/5 * * * *
+BOT2_SCHEDULER_ENABLED=true
+
+# ===========================================
+# BILLING RATES (Bot 2)
+# ===========================================
+# Labor rates in dollars per hour
+LABOR_RATE_STANDARD=150
+LABOR_RATE_EMERGENCY=300
+
+# Markup percentage for stock/truck materials
+STOCK_MARKUP_PERCENT=22
+
+# ===========================================
+# RECEIPT PROCESSING (Bot 1)
 # ===========================================
 # Default expense account ID in QuickBooks
 DEFAULT_EXPENSE_ACCOUNT_ID=
@@ -66,5 +120,3 @@ ENABLE_OCR=true
 # ===========================================
 LOG_LEVEL=info
 LOG_FILE=logs/app.log
-
-
